fix image overflow

--- a/src/app/posts/[slug]/SinglePage.module.css
+++ b/src/app/posts/[slug]/SinglePage.module.css
@@ -76,21 +76,6 @@
   min-width: 0;
 }
 
-.description p {
-  font-size: 20px;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-
-.description {
-  overflow-wrap: break-word;
-  min-width: 0;
-}
-
-.description img {
-  max-width: 100%;
-}
-
 .notFound {
   margin: 50px auto;
   text-align: center;
