--- a/src/components/PageProgress/PageProgress.module.css
+++ b/src/components/PageProgress/PageProgress.module.css
@@ -31,4 +31,5 @@
 
 .description img {
   max-width: 100%;
+  height: auto;
 }
